<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".agregar.AgregarUsuario"
    android:orientation="vertical"
    android:weightSum="7">

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textPersonName"
        android:hint="@string/msgNombre3"
        android:textSize="20sp"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/txtApellidoP"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textPersonName"
        android:hint="@string/msgApellidoP"
        android:textSize="20sp"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/txtApellidoM"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textPersonName"
        android:hint="@string/msgApellidoM"
        android:textSize="20sp"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/txtCelular"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textPersonName"
        android:hint="@string/msgCelular"
        android:textSize="20sp"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textPersonName"
        android:hint="@string/msgCorreoE"
        android:textSize="20sp"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/txtContraseña"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textPersonName"
        android:hint="@string/msgContraseña"
        android:textSize="20sp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnAgregarUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAdd4"
        android:layout_gravity="center"
        />
</LinearLayout>